--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -9,17 +9,29 @@ body
 {
     width: 100%;
     height: 100%;
-    font-family: sans-serif;
-    font-size: 17px;
-    background-color: 	#2F4F4F ;
-    margin: auto;
+	font-family: sans-serif;
+	font-size: 17px;
+	background-color: rgb(44, 41, 41);
+	margin: auto;
 }
-button{
-    display: block;
-    margin: 20px auto;
-    padding: 5px;
-    width: 20%;
-    font-size: larger;
+button
+{
+	    display: block;
+	    margin: 20px auto;
+	    padding: 5px;
+	    width: 20%;
+	    font-size: larger;
+	    color: rgb(255, 128, 64);
+	    text-decoration: none;   
+}
+a
+{
+    text-decoration: none;	
+}
+p
+{
+	margin: 0 auto;
+	text-align: center;
 }
 fieldset
 {
@@ -36,7 +48,8 @@ input
     margin: 10px auto;
     max-width: 350px;
 }
-label{
+label
+{
     display: block;
     text-align: center;    
 }
